[gd_scene load_steps=9 format=3 uid="uid://c206ed3pcv5fc"]

[ext_resource type="Texture2D" uid="uid://dv3dposm0fngj" path="res://sprites/Seasonal Tilesets/1 - Grassland/Background parts/_Complete_static_BG_(288 x 208).png" id="1_2bes4"]
[ext_resource type="Script" uid="uid://dvqn8pceiffro" path="res://scripts/tile_screen.gd" id="1_hs8de"]
[ext_resource type="Theme" uid="uid://cl2vtf3tyed83" path="res://utilities/default-buttons.tres" id="2_hs8de"]
[ext_resource type="Texture2D" uid="uid://cvhh0asv1ank" path="res://sprites/Seasonal Tilesets/game_logo.png" id="3_jvohi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vt4u7"]

[sub_resource type="Animation" id="Animation_jvohi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hs8de"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.366667, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-250, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.776667, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vt4u7"]
_data = {
&"RESET": SubResource("Animation_jvohi"),
&"reveal": SubResource("Animation_hs8de")
}

[node name="TileScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hs8de")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -44.5
offset_right = 332.5
offset_bottom = 208.0
texture = ExtResource("1_2bes4")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="game_logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
expand_mode = 2

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_hs8de")
text = "INICIAR"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vt4u7")

[node name="credits_btn2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_hs8de")
text = "CRÃ‰DITOS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vt4u7")

[node name="commands_btn4" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_hs8de")
text = "COMANDOS
"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vt4u7")

[node name="quit_btn3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_hs8de")
text = "SAIR"

[node name="mochi" type="TextureRect" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_jvohi")
expand_mode = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vt4u7")
}
autoplay = "reveal"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn2" to="." method="_on_credits_btn_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/commands_btn4" to="." method="_on_commands_btn_4_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/commands_btn4" to="." method="_on_quit_btn_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn3" to="." method="_on_quit_btn_3_pressed"]
